--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -10,7 +10,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:orientation="horizontal">
 
@@ -30,17 +30,26 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:gravity="center_vertical"
             android:layout_marginRight="3dp"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:layout_marginTop="5dp"
+            android:orientation="vertical"
             android:background="@drawable/login_button_bk">
 
             <TextView
                 android:id="@+id/txtRemainBalnceHome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="15dp"
+                android:text=""/>
+
+            <TextView
+                android:id="@+id/txtCommision"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
