--- a/app/src/main/res/layout/fragment_downline_agent.xml
+++ b/app/src/main/res/layout/fragment_downline_agent.xml
@@ -31,13 +31,14 @@
 
     <TextView
 
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="Select Date"
         android:textAllCaps="true"
-        android:layout_marginTop="5dp"
+        android:gravity="center"
         android:textColor="@color/white"
+        android:background="@color/green"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -50,15 +51,14 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginTop="10dp"
+                android:layout_height="35dp"
                 android:background="#303030"
                 android:gravity="center|left"
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:background="@drawable/date_icon"
                     app:tint="@color/white" />
 
@@ -91,10 +91,12 @@
             android:orientation="vertical">
             <TextView
 
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="2dp"
                 android:text="Select Agent"
+                android:gravity="center"
+                android:background="@color/green"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 android:textAllCaps="true"
@@ -111,8 +113,7 @@
                 <Spinner
                     android:id="@+id/spinnerAgent"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_height="wrap_content"
                     android:text=""
                     android:backgroundTint="@color/white"
                     android:textSize="17sp"
@@ -146,9 +147,98 @@
     </LinearLayout>
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/green"
+        android:layout_marginTop="10dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:id="@+id/linearUser"
+        android:visibility="gone"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/txtAgentNAme"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:gravity="start"
+            android:layout_marginTop="5dp"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:text=""/>
+
+        <TextView
+            android:id="@+id/txtCloseDate"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:gravity="right"
+            android:layout_marginTop="5dp"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:text=""/>
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/linearHeaderResult"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingLeft="5dp"
+        android:visibility="gone"
+        android:background="@color/yellow">
+        <View
+            android:layout_width="20dp"
+            android:layout_height="20dp"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:paddingLeft="5dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:gravity="start"
+            android:textStyle="bold"
+            android:text="Name"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:text="Tan"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:text="Ticket"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:text="Win"/>
+
+    </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvAgentData"
-        android:layout_marginTop="10dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         android:orientation="vertical"
         app:spanCount="1"
@@ -156,145 +246,66 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <androidx.cardview.widget.CardView
+
+    <LinearLayout
         android:id="@+id/cardFinalTotal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
+        android:orientation="horizontal"
         android:visibility="gone"
-        app:cardCornerRadius="5dp">
-        <LinearLayout
-            android:layout_width="match_parent"
+        android:paddingLeft="5dp"
+        android:layout_marginTop="5dp"
+        android:background="@color/yellow">
+
+        <View
+            android:layout_width="20dp"
+            android:layout_height="20dp"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:paddingLeft="5dp"
             android:layout_height="wrap_content"
-            android:background="#303030"
-            android:paddingBottom="5dp"
-            android:orientation="vertical">
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:gravity="start"
+            android:textStyle="bold"
+            android:text="Total"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="5dp"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                android:text="Final Total"/>
+        <TextView
+            android:id="@+id/txtFinalTotalTan"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:text=""/>
 
+        <TextView
+            android:id="@+id/txtFinalTotalTicket"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:text=""/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="2dp"
-                android:paddingRight="2dp"
-                android:orientation="horizontal">
+        <TextView
+            android:id="@+id/txtFinalTotalWin"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:text=""/>
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:layout_marginTop="5dp"
-                    android:textSize="17dp"
-                    android:text="Total Tan"/>
+    </LinearLayout>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:textColor="@color/white"
-                    android:gravity="center"
-                    android:textSize="17dp"
-                    android:layout_marginTop="5dp"
-                    android:text=":"/>
-
-                <TextView
-                    android:id="@+id/txtFinalTotalTan"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:layout_marginTop="5dp"
-                    android:gravity="right"
-                    android:textSize="17dp"
-                    android:text="0"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="2dp"
-                android:paddingRight="2dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:layout_marginTop="5dp"
-                    android:textSize="17dp"
-                    android:text="Total Ticket"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:textColor="@color/white"
-                    android:gravity="center"
-                    android:textSize="17dp"
-                    android:layout_marginTop="5dp"
-                    android:text=":"/>
-
-                <TextView
-                    android:id="@+id/txtFinalTotalTicket"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:layout_marginTop="5dp"
-                    android:gravity="right"
-                    android:textSize="17dp"
-                    android:text="0"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="2dp"
-                android:paddingRight="2dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:layout_marginTop="5dp"
-                    android:textSize="17dp"
-                    android:text="Total Win"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:textColor="@color/white"
-                    android:gravity="center"
-                    android:textSize="17dp"
-                    android:layout_marginTop="5dp"
-                    android:text=":"/>
-
-                <TextView
-                    android:id="@+id/txtFinalTotalWin"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/green"
-                    android:layout_marginTop="5dp"
-                    android:gravity="right"
-                    android:textSize="17dp"
-                    android:text="0"/>
-
-            </LinearLayout>
-
-
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
 
