--- a/app/src/main/res/layout/row_agent_data.xml
+++ b/app/src/main/res/layout/row_agent_data.xml
@@ -12,116 +12,38 @@
     android:paddingBottom="5dp"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/txtName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="5dp"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:text="Name"/>
+
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="2dp"
-        android:paddingRight="2dp"
+        android:paddingLeft="5dp"
         android:orientation="horizontal">
-
         <TextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:layout_marginTop="5dp"
-            android:textSize="17dp"
-            android:text="Close Date"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textColor="@color/white"
+            android:id="@+id/txtSerial"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:textColor="@color/black"
             android:gravity="center"
-            android:textSize="17dp"
+            android:background="@drawable/circle_shape"
             android:layout_marginTop="5dp"
-            android:text=":"/>
+            android:textSize="17dp"
+            android:text=""/>
 
         <TextView
-            android:id="@+id/txtCloseDate"
+            android:id="@+id/txtName"
             android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:layout_marginTop="5dp"
-            android:gravity="right"
-            android:textSize="17dp"
-            android:text="22/12/2020"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="2dp"
-        android:paddingRight="2dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
+            android:gravity="start"
+            android:paddingLeft="5dp"
             android:layout_marginTop="5dp"
             android:textSize="17dp"
-            android:text="Game Time"/>
+            android:text="Name"/>
 
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textColor="@color/white"
-            android:gravity="center"
-            android:textSize="17dp"
-            android:layout_marginTop="5dp"
-            android:text=":"/>
-
-        <TextView
-            android:id="@+id/txtTime"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:layout_marginTop="5dp"
-            android:gravity="right"
-            android:textSize="17dp"
-            android:text="12:00"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="2dp"
-        android:paddingRight="2dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:layout_marginTop="5dp"
-            android:textSize="17dp"
-            android:text="Total Tan"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textColor="@color/white"
-            android:gravity="center"
-            android:textSize="17dp"
-            android:layout_marginTop="5dp"
-            android:text=":"/>
 
         <TextView
             android:id="@+id/txtTotalTan"
@@ -130,34 +52,9 @@
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:layout_marginTop="5dp"
-            android:gravity="right"
-            android:textSize="17dp"
-            android:text="0"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="2dp"
-        android:paddingRight="2dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:layout_marginTop="5dp"
-            android:textSize="17dp"
-            android:text="Total Ticket"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textColor="@color/white"
             android:gravity="center"
             android:textSize="17dp"
-            android:layout_marginTop="5dp"
-            android:text=":"/>
+            android:text="0"/>
 
         <TextView
             android:id="@+id/txtTotalTicket"
@@ -166,35 +63,10 @@
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:layout_marginTop="5dp"
-            android:gravity="right"
-            android:textSize="17dp"
-            android:text="0"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="2dp"
-        android:paddingRight="2dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:layout_marginTop="5dp"
-            android:textSize="17dp"
-            android:text="Total Win"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textColor="@color/white"
             android:gravity="center"
             android:textSize="17dp"
-            android:layout_marginTop="5dp"
-            android:text=":"/>
+            android:text="0"/>
+
 
         <TextView
             android:id="@+id/txtTotalWin"
@@ -203,7 +75,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/green"
             android:layout_marginTop="5dp"
-            android:gravity="right"
+            android:gravity="center"
             android:textSize="17dp"
             android:text="0"/>
 
