--- a/app/src/main/res/layout/row_agent_data.xml
+++ b/app/src/main/res/layout/row_agent_data.xml
@@ -46,21 +46,10 @@
 
 
         <TextView
-            android:id="@+id/txtTotalTan"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:layout_marginTop="5dp"
-            android:gravity="center"
-            android:textSize="17dp"
-            android:text="0"/>
-
-        <TextView
             android:id="@+id/txtTotalTicket"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:textColor="@color/white"
             android:layout_marginTop="5dp"
             android:gravity="center"
@@ -72,12 +61,25 @@
             android:id="@+id/txtTotalWin"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:textColor="@color/green"
             android:layout_marginTop="5dp"
             android:gravity="center"
             android:textSize="17dp"
             android:text="0"/>
+
+
+        <TextView
+            android:id="@+id/txtTotalTan"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:textColor="@color/white"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:textSize="17dp"
+            android:text="0"/>
+
 
     </LinearLayout>
 
