--- a/app/src/main/res/layout/activity_book_game.xml
+++ b/app/src/main/res/layout/activity_book_game.xml
@@ -130,7 +130,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="23"
+        android:layout_weight="17"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -160,6 +160,32 @@
                     android:layout_marginLeft="5dp"
                     android:text=""
                     android:textColor="@color/white"
+                    android:textSize="17sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginLeft="10sp"
+                android:gravity="center|left"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:background="@drawable/ic_watch"
+                    android:tint="@color/red"
+                    app:tint="@color/red"/>
+
+                <TextView
+                    android:id="@+id/tv_time_Timer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text=""
+                    android:textColor="@color/red"
                     android:textSize="17sp"
                     android:textStyle="bold" />
 
@@ -329,7 +355,7 @@
         android:layout_height="0dp"
         android:layout_marginLeft="10sp"
         android:layout_marginRight="10sp"
-        android:layout_weight="8"
+        android:layout_weight="6"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -785,158 +811,31 @@
         android:textSize="15sp"
         android:textStyle="bold" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="08" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginLeft="5sp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="5sp"
-        android:layout_weight="10"
-        android:orientation="horizontal"
-        android:visibility="invisible">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:background="@drawable/blackdrawable"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="Total:"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
-                android:textSize="15sp" />
 
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="150000"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
-                android:textSize="17sp"
-                android:textStyle="bold" />
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:background="@drawable/blackdrawable"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="BILL:"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
-                android:textSize="15sp" />
-
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="150000"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
-                android:textSize="17sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3" />
-
-    <!--
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:background="@drawable/blackdrawable"
-            android:layout_marginRight="75sp"
-            android:layout_marginLeft="75sp"
-            android:layout_marginTop="15dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_weight="1"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_gravity="center"
-                android:gravity="center">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="BILL=150000"
-                    android:textStyle="bold"
-                    android:textSize="17sp"
-                    android:textAllCaps="true"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:textColor="@color/white"/>
-
-            </LinearLayout>
-        </LinearLayout>-->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_weight="35"
         android:layout_marginLeft="20sp"
         android:layout_marginRight="20sp"
-
+        android:paddingTop="20dp"
         android:orientation="horizontal">
 
         <LinearLayout
             android:id="@+id/linearbluerectangle"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_gravity="center"
-
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:gravity="center">
+            android:gravity="center_horizontal">
 
             <Button
                 android:id="@+id/btn_done_details"
                 android:layout_width="250dp"
                 android:layout_height="match_parent"
-                android:layout_gravity="center"
                 android:background="@drawable/login_button_bk"
                 android:gravity="center"
                 android:text="Done"
@@ -954,59 +853,6 @@
         android:layout_height="0dp"
         android:layout_weight="10" />
 
-    <!--  <Button
-          android:id="@+id/btntotal"
-          android:layout_width="match_parent"
-          android:layout_height="55dp"
-          android:layout_marginTop="10dp"
-          android:layout_gravity="center"
-          android:background="@drawable/blackdrawable"
-          android:layout_marginLeft="65dp"
-          android:layout_marginRight="65dp"
-          android:textAllCaps="true"
-          android:textColor="@color/white"
-          android:text="Total=150000"
-          android:textStyle="bold"
-          android:textSize="17sp" />
-      <Button
-          android:id="@+id/billbtn"
-          android:layout_width="match_parent"
-          android:layout_height="55dp"
-          android:layout_marginTop="10dp"
-          android:layout_gravity="center"
-          android:background="@drawable/blackdrawable"
-          android:layout_marginLeft="65dp"
-          android:layout_marginRight="65dp"
-          android:textAllCaps="true"
-          android:textColor="@color/white"
-          android:text="BILL=100000"
-          android:textStyle="bold"
-          android:textSize="17sp" />
-      <Button
-          android:id="@+id/btnbooknow"
-          android:layout_width="match_parent"
-          android:layout_height="55dp"
-          android:layout_marginTop="10dp"
-          android:layout_gravity="center"
-          android:background="@drawable/blackdrawable"
-          android:layout_marginLeft="65dp"
-          android:layout_marginRight="65dp"
-          android:textAllCaps="true"
-          android:textColor="@color/red"
-          android:text="Total=150000"
-          android:textStyle="bold"
-          android:textSize="17sp" />-->
-    <!--<Button
-        android:id="@+id/btnclocktime"
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:layout_marginTop="10dp"
-        android:layout_gravity="center"
-        android:background="@drawable/bluerectangle"
-        android:layout_marginLeft="65dp"
-        android:layout_marginRight="65dp"
-        android:textAllCaps="true"
-        android:textColor="@color/white"
-        android:text="CLOCK TIME" />-->
+
 
 </LinearLayout>
