--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -25,30 +25,30 @@
         <item
             android:id="@+id/nav_agent"
             android:icon="@drawable/drwa_result_icon"
-            android:title="Downline Agent" />
+            android:title="Downline Bill" />
         <item
             android:id="@+id/nav_notification"
             android:icon="@drawable/notifications_icon"
             android:title="Notification" />
 
-        <item android:id="@+id/nav_about_us"
-            android:icon="@drawable/about_us_icon"
-            android:title="About Us"></item>
+<!--        <item android:id="@+id/nav_about_us"-->
+<!--            android:icon="@drawable/about_us_icon"-->
+<!--            android:title="About Us"></item>-->
 
-        <item
-            android:id="@+id/nav_privacy_policy"
-            android:icon="@drawable/privacy_policy_icon"
-            android:title="Privacy Policy" />
+<!--        <item-->
+<!--            android:id="@+id/nav_privacy_policy"-->
+<!--            android:icon="@drawable/privacy_policy_icon"-->
+<!--            android:title="Privacy Policy" />-->
 
 <!--        <item-->
 <!--            android:id="@+id/nav_contact_us"-->
 <!--            android:icon="@drawable/phone_icon"-->
 <!--            android:title="Contact Us" />-->
 
-        <item
-            android:id="@+id/nav_term_condition"
-            android:icon="@drawable/terms_conditions_icon"
-            android:title="Term and Condition" />
+<!--        <item-->
+<!--            android:id="@+id/nav_term_condition"-->
+<!--            android:icon="@drawable/terms_conditions_icon"-->
+<!--            android:title="Term and Condition" />-->
 
 
         <item
