--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -56,6 +56,25 @@
             android:textColor="@color/green" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Commision:"
+            android:textSize="18dp"
+            android:textColor="@color/white" />
+        <TextView
+            android:id="@+id/txtCommisn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="18dp"
+            android:textColor="@color/green" />
+    </LinearLayout>
+
 
 
 </LinearLayout>
