--- a/app/src/main/res/layout/fragment_downline_agent.xml
+++ b/app/src/main/res/layout/fragment_downline_agent.xml
@@ -36,8 +36,8 @@
         android:layout_gravity="center_horizontal"
         android:text="Select Date"
         android:gravity="center"
-        android:textColor="@color/black"
-        android:background="#6B41B6"
+        android:textColor="@color/white"
+        android:background="@color/red"
         android:textSize="17sp" />
 
 
@@ -88,8 +88,8 @@
                 android:layout_marginLeft="2dp"
                 android:text="Select Agent"
                 android:gravity="center"
-                android:textColor="@color/black"
-                android:background="#6B41B6"
+                android:textColor="@color/white"
+                android:background="@color/red"
                 android:textSize="17sp"
                 android:layout_gravity="center_horizontal" />
 
@@ -140,7 +140,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#6B41B6"
+        android:background="@color/red"
         android:layout_marginTop="10dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
@@ -153,7 +153,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:gravity="start"
             android:textSize="17dp"
             android:text=""/>
@@ -163,7 +163,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:gravity="right"
             android:textSize="17dp"
             android:text=""/>
