--- a/app/src/main/res/layout/row_history.xml
+++ b/app/src/main/res/layout/row_history.xml
@@ -59,7 +59,16 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="2"
+                        android:gravity="center|right"
                         android:orientation="horizontal">
+                        <ImageView
+                            android:id="@+id/IvCross"
+                            android:layout_width="25sp"
+                            android:layout_height="25sp"
+                            android:layout_marginRight="10sp"
+                            android:src="@drawable/cross_icon"></ImageView>
+
+
 
                         <!--                        <TextView-->
                         <!--                            android:layout_width="0dp"-->
@@ -174,6 +183,8 @@
                         android:text=""
                         android:textColor="@color/white"
                         android:textSize="12sp" />
+
+
 
 
                 </LinearLayout>
